moving stall header down in html to resolve z-index issue

--- a/trunk/cz2006/web/static/stall/css/stallstyle.css
+++ b/trunk/cz2006/web/static/stall/css/stallstyle.css
@@ -1,3 +1,7 @@
+body{
+    width: 1024px;
+    height:768px;
+}
 #wrapper{
     padding-top: 30px;
 }
